編號避讓：Task 336-338→337-339、Requirement 77-79→78-80